[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "alita_tools"
version = "0.3.59"
description = "Default set of tools and toolkits available within ELITEA Agents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "Artem Rozumenko"
email = "support@projectalita.ai"

[[project.authors]]
name = "Artem Dubrovskii"
email = "artem_dubrovskii@epam.com"

[project.urls]
Homepage = "https://projectalita.ai"
Issues = "https://github.com/ProjectAlita/application-tools/issues"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.pytest.ini_options]
minversion = "8.3.3"
pythonpath = "src"
addopts = """
        -v -ra -q -p no:warnings 
        --ignore=src/alita_tools/ado/test_plan
        --rootdir=./src
        src/tests/
        """
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"
cache_dir = ".pytest_cache"
python_files = "test_*.py"
python_functions = "test_"
testpaths = [
    "tests",
    "tests/ado"
]
markers = [
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
    "positive: marks positive tests",
    "negative: marks negative tests",
    "ado_repos: marks ADO Repos tests",
]

[tool.coverage.run]
dynamic_context = "test_function"
relative_files = "true"
omit = [
    "*/__init__.py",
    "*/tests/*",
    "model.py",
    "*constants.py",
    ]